windows error fix z-index

--- a/packages/frontend/src/css/windows95-popup.scss
+++ b/packages/frontend/src/css/windows95-popup.scss
@@ -30,6 +30,7 @@ $w: #ffffff;
   display: none;
   position: fixed;
   max-width: 90%;
+  z-index: 11;
 
   p {
     margin: 0;
